--- a/index.html
+++ b/index.html
@@ -78,11 +78,19 @@ body{
 #contador2{
 	text-align:center;
 }
+
+.logo{
+	float:right;
+	margin-bottom:220px;
+	
+	}
+
 </style>
 </head>
 
 <body>
-<p id="contador1">0</p>
+
+<h2 id="contador1">0</h2>
 
 <div class="cuerpo">
 
@@ -229,8 +237,38 @@ switch (botoncorrecto){
 
 </script>
 
+</div>
+
+<br />
+<h2 id="contador2">0</h2>
+
+
+
+
+<div class="logo">
+<table width="330">
+  <tr>
+    <td><footer>
+<br />
+<h3> Carlos Rodriguez <br /> 
+ Orlando Correa <br />
+ Naren Avila <br />
+ Mateo Prieto</h3>
+ 
+</footer></td>
+    <td><img src="logo.png" width="157" height="78" /></td>
+  </tr>
+</table>
+</div>
+
+
 
 </div>
-<p id="contador2">0</p>
+
+
+
+
+</div>
 </body>
+
 </html>
